--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-csp-header": "^5.2.1",
     "helmet": "^7.0.0",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
