--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-csp-header": "^5.2.1",
     "helmet": "^7.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   },
